--- a/web-app/src/containers/App/App.css
+++ b/web-app/src/containers/App/App.css
@@ -8,16 +8,17 @@
     position: absolute;
     height: 100vh;
     width: 100vw;
-    bottom: -38.2%;
-    z-index: 2;
+    left: -25%;
+    z-index: 1;
 }
 
 .visualization-container {
     position: absolute;
     height: 100%;
-    width: calc(100% - 3rem);
-    left: 50%;
+    width: 50vw;
+    padding: 3rem;
+    right: -25%;
     transform: translateX(-50%);
     text-align: center;
-    z-index: 1;
+    z-index: 2;
 }
