--- a/web-app/src/containers/App/App.css
+++ b/web-app/src/containers/App/App.css
@@ -2,23 +2,24 @@
     overflow: hidden;
     height: 100%;
     position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 .canvas-container {
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
-    left: -25%;
-    z-index: 1;
+    flex: 1 0 auto;
+    width: 100%;
+    transform: translate(-25%, 12.5%);
 }
 
 .visualization-container {
-    position: absolute;
-    height: 100%;
-    width: 50vw;
-    padding: 3rem;
-    right: -25%;
-    transform: translateX(-50%);
+    padding: 2rem;
     text-align: center;
-    z-index: 2;
+    width: 50%;
+}
+
+.timer-container {
+    position: absolute;
+    right: 2rem;
+    bottom: 2rem;
 }
