--- a/web-app/src/containers/App/App.css
+++ b/web-app/src/containers/App/App.css
@@ -2,24 +2,34 @@
     overflow: hidden;
     height: 100%;
     position: relative;
-    display: flex;
-    flex-direction: column;
+    max-width: 1500px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .canvas-container {
-    flex: 1 0 auto;
-    width: 100%;
-    transform: translate(-25%, 12.5%);
+    position: absolute;
+    width: 100vw;
+    height: 75vh;
+    min-height: 900px;
+    left: 0;
+    top: 0;
+    transform: translate(-25%, 0);
 }
 
 .visualization-container {
+    position: absolute;
     padding: 2rem;
     text-align: center;
-    width: 50%;
+    width: 100vw;
+    height: 100vh;
+    max-width: 900px;
+    right: 0;
+    transform: translate(0%, 37.5%);
 }
 
 .timer-container {
     position: absolute;
     right: 2rem;
-    bottom: 2rem;
+    top: 2rem;
 }
