--- a/web-app/src/containers/App/App.css
+++ b/web-app/src/containers/App/App.css
@@ -10,11 +10,11 @@
 .canvas-container {
     position: absolute;
     width: 100vw;
-    height: 75vh;
-    min-height: 900px;
+    height: 100vh;
+    min-height: 75vh;
     left: 0;
     top: 0;
-    transform: translate(-25%, 0);
+    transform: translate(-25%, -6.25%);
 }
 
 .visualization-container {
