--- a/web-app/src/containers/App/App.css
+++ b/web-app/src/containers/App/App.css
@@ -1,20 +1,12 @@
-.app {
-    overflow: hidden;
-    height: 100%;
-    position: relative;
-    max-width: 1500px;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
 .canvas-container {
     position: absolute;
     width: 100vw;
     height: 100vh;
     min-height: 75vh;
-    left: 0;
-    top: 0;
-    transform: translate(-25%, -6.25%);
+}
+
+.canvas-container > * {
+    transform: translateX(-12.5%);
 }
 
 .visualization-container {
@@ -24,8 +16,8 @@
     width: 100vw;
     height: 100vh;
     max-width: 900px;
-    right: 0;
-    transform: translate(0%, 37.5%);
+    right: 50%;
+    transform: translate(75%, 32.5%);
 }
 
 .timer-container {
