--- a/web-app/src/containers/App/App.css
+++ b/web-app/src/containers/App/App.css
@@ -1,27 +1,18 @@
 .canvas-container {
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    min-height: 75vh;
-}
-
-.canvas-container > * {
-    transform: translateX(-12.5%);
+    flex: 1;
+    max-width: 50%;
+    max-height: 75vh;
+    min-height: 600px;
 }
 
 .visualization-container {
-    position: absolute;
+    flex: 1;
+    max-width: 50%;
     padding: 2rem;
-    text-align: center;
-    width: 100vw;
-    height: 100vh;
-    max-width: 900px;
-    right: 50%;
-    transform: translate(75%, 32.5%);
 }
 
 .timer-container {
     position: absolute;
-    right: 2rem;
-    top: 2rem;
+    left: 2rem;
+    bottom: 2rem;
 }
